--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "normalize.css": "^5.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
