--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "jardin",
   "version": "0.1.0",
   "private": true,
+  "description": "A text-based choose your own adventure platform.",
   "devDependencies": {
+    "got": "^6.7.1",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
@@ -14,12 +16,17 @@
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/paeeon/jardin.git"
   }
 }
