--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
-    "firebase": "^3.6.3",
-    "normalize.css": "^5.0.0",
+    "jsonwebtoken": "^7.3.0",
+    "jwt-decode": "^2.2.0",
+    "normalize.css": "^7.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
