added actions that include authenticated user info in redux... not a great implementation but it works for now

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A text-based choose your own adventure platform.",
   "devDependencies": {
     "got": "^6.7.1",
+    "morgan": "^1.8.1",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
