--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
