--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^4.4.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-scripts": "1.0.11",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
